[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Lawson Lewis <lawson@kurrawong.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
connegp = "^0.2"
requests = "^2.31.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
