[tool.poetry]
name = "connegp-testclient"
version = "0.1.0"
description = "test client for content negotiation by profile implementations"
authors = ["Lawson Lewis <lawson@kurrawong.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
connegp = "^0.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
